# kube-resource-report

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
deploy/: deployment.yaml
kube_resource_report/: cluster_discovery.py  filters.py  ingressroute.py  main.py  output.py  pricing.py  query.py  report.py
kube_resource_report/templates/: application.html  metrics
kube_resource_report/templates/assets/: kube-resource-report.css
tests/: conftest.py  test_query.py  test_report.py
unsupported/chart/kube-resource-report/: Chart.yaml  values.yaml
unsupported/chart/kube-resource-report/templates/: deployment.yaml
